--- a/provisioning/subcase-1d/roles/cti_ss/templates/taxii.yaml.j2
+++ b/provisioning/subcase-1d/roles/cti_ss/templates/taxii.yaml.j2
@@ -5,26 +5,26 @@ server:
 
 collections:
 {% for collection in cti_ss_taxii_collections %}
-  - id: {{ collection.id }}
-    title: {{ collection.title }}
-    description: {{ collection.description }}
+  - id: {{ collection.id | to_json }}
+    title: {{ collection.title | to_json }}
+    description: {{ collection.description | to_json }}
     can_read:
 {% for reader in collection.can_read %}
-      - {{ reader }}
+      - {{ reader | to_json }}
 {% endfor %}
     can_write:
 {% for writer in collection.can_write %}
-      - {{ writer }}
+      - {{ writer | to_json }}
 {% endfor %}
 {% endfor %}
 
 authentication:
   users:
 {% for user in cti_ss_auth.users %}
-    - username: {{ user.username }}
-      password: {{ user.password }}
+    - username: {{ user.username | to_json }}
+      password: {{ user.password | to_json }}
       permissions:
 {% for permission in user.permissions %}
-        - {{ permission }}
+        - {{ permission | to_json }}
 {% endfor %}
 {% endfor %}
